--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^3.0.6",
     "connect-flash": "^0.1.1",
     "connect-loki": "^1.1.0",
+    "date-fns": "^2.4.1",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "moment": "^2.24.0",
